# codingMatrix

./: .gitignore  README.md  nb  pyproject.toml  runtests
notebooks/: 18.06_01_geometry_of_linear_equations.ipynb  18.06_02_elimination.ipynb  18.06_03_multiplication_and_inverse.ipynb  18.06_04_factorize_A_into_LU.ipynb  18.06_05_transposes_permutations_spaces_rn.ipynb  18.06_06_column_space_and_nullspace.ipynb  18.06_07_pivot_variables_and_special_solutions.ipynb  18.06_08_row_reduced_form_R.ipynb  18.06_09_independence_basis_and_dimension.ipynb  18.06_10_4_fundamental_subspaces.ipynb  18.06_11_matrix_spaces_rank_1_small_world_graphs.ipynb  18.06_12_graphs_networks_incidence_matrices.ipynb  18.06_13_exam_1.ipynb  18.06_14_orthogonal_vectors_and_subspaces.ipynb  18.06_15_projections_onto_subspaces.ipynb  18.06_16_projection_matrices_and_least_squares.ipynb  18.06_17_orthogonal_matrices_and_gram_schmidt.ipynb  18.06_18_properties_of_determinants.ipynb  18.06_19_determinant_formulas_and_cofactors.ipynb  matrix_determinant.ipynb
references/: README.md
src/: README.md
src/chp1/: test.py
src/ctm/chapter0/: caesarCypher.py
src/pyLinearAlgebra/mattools/: __init__.py  queries.py  transformers.py
src/pyLinearAlgebra/vistools/: __init__.py  vis2d.py
src/symbolic/: README.md  matrices.ipynb
tests/: test_pycodingmatrix.py
tests/chapter0/: test_caesarCypher.py
tests/chapter1/: test_fieldOfComplexNumbers.py  test_findKey.py
tests/chapter2/: test_three_TAs.py  test_vectorUtils.py
tests/mattools/: test_queries.py  test_solver.py  test_transformers.py
(+13 files in other folders)
